<resources>
    <string name="app_name">Me voy de viaje</string>
    <string name="destino">Destino:</string>
    <string name="paris">Paris</string>
    <string name="londres">Londres</string>
    <string name="roma">Roma</string>
    <string name="transporte">Transporte</string>
    <string name="coche">Coche</string>
    <string name="tren">Tren</string>
    <string name="avi_n">Avión</string>
    <string name="informaci_n">Información</string>
</resources>